<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

   <EditText
       android:id="@+id/ip_address"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/ip_address"/>

    <LinearLayout
        android:layout_below="@id/ip_address"
        android:id="@+id/linear_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/button_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button_disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disconnect"
            android:layout_weight="1"/>
    </LinearLayout>
    <TextView
        android:id="@+id/legend_status"
        android:layout_below="@id/linear_container"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"/>
    <TextView
        android:id="@+id/connection_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/off"
        android:layout_below="@id/linear_container"
        android:layout_toRightOf="@id/legend_status"
        android:layout_marginLeft="10dp"/>
    <LinearLayout
        android:layout_below="@id/connection_status_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4">
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/slider_1"
            android:layout_marginTop="10dp"
            android:layout_weight="3"/>
        <TextView
            android:id="@+id/progress1"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="0"
            android:paddingTop="10dp"
            android:textAlignment="center"
            />
        </LinearLayout>



</RelativeLayout>
